@@ -107,7 +107,7 @@ public class ProductTable extends JTable {
 			Set<String> productIds = AbstractGroupTree.getChildrenRecursively(node);
 			setFilter(productIds);
 		} else {
-			Set<String> productIds = Collections.singleton(node.toString());
+			Set<String> productIds = Set.of(node.toString());
 			setFilter(productIds);
 			setPendingSelection(productIds);
 		}
@@ -233,11 +233,7 @@ public class ProductTable extends JTable {
 
 	@SuppressWarnings("java:S1452")
 	public List<? extends SortKey> getSortKeys() {
-		if (getRowSorter() != null) {
-			return getRowSorter().getSortKeys();
-		} else {
-			return getPrimaryOrderingKeys();
-		}
+		return getRowSorter() != null ? getRowSorter().getSortKeys() : getPrimaryOrderingKeys();
 	}
 
 	public void setSortKeys(List<? extends SortKey> currentSortKeys) {
