@@ -10,7 +10,6 @@ import java.awt.Component;
 import java.awt.Font;
 import java.sql.Timestamp;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -20,7 +19,6 @@ import java.util.Set;
 import java.util.regex.Pattern;
 
 import javax.swing.JCheckBox;
-import javax.swing.JComponent;
 import javax.swing.JDialog;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
@@ -47,8 +45,6 @@ import de.uib.configed.gui.share.table.gui.BooleanIconTableCellRenderer;
 import de.uib.configed.gui.share.table.gui.ColorTableCellRenderer;
 import de.uib.configed.gui.share.table.gui.PanelGenEdit;
 import de.uib.configed.gui.share.table.provider.DefaultTableProvider;
-import de.uib.configed.gui.share.table.provider.MapRetriever;
-import de.uib.configed.gui.share.table.provider.RetrieverMapSource;
 import de.uib.configed.gui.type.SWAuditClientEntry;
 import de.uib.configed.gui.type.SWAuditEntry;
 import de.uib.configed.share.Icons;
@@ -170,17 +166,8 @@ public class PanelSWSingleClientInfo extends JPanel {
 		}
 
 		modelSWInfo = new GenTableModel(null,
-				new DefaultTableProvider(new RetrieverMapSource(columnNames, new MapRetriever() {
-					@Override
-					public void reloadMap() {
-						// Nothing to reload.
-					}
-
-					@Override
-					public Map<String, Map<String, Object>> retrieveMap() {
-						return retrieveSWInfoMap();
-					}
-				})), -1, finalColumns, null, null);
+				DefaultTableProvider.createWithRetrieverMapSource(columnNames, null, this::retrieveSWInfoMap), -1,
+				finalColumns, null, null);
 
 		int indexOfColWindowsSoftwareID = columnNames.indexOf(SWAuditEntry.WINDOWS_SOFTWARE_ID);
 		modelSWInfo.chainFilter(FILTER_MS_UPDATES, createTableModelFilter1(indexOfColWindowsSoftwareID));
@@ -223,7 +210,7 @@ public class PanelSWSingleClientInfo extends JPanel {
 		if (panelTable.getGenEditTable().getRowSorter() instanceof TableRowSorter) {
 			TableRowSorter<? extends TableModel> rowSorter = (TableRowSorter<? extends TableModel>) panelTable
 					.getGenEditTable().getRowSorter();
-			rowSorter.setComparator(7, new OSComparator());
+			rowSorter.setComparator(7, Comparator.comparing((Boolean b) -> b).reversed());
 
 			List<RowSorter.SortKey> sortKeys = new ArrayList<>(2);
 			sortKeys.add(new RowSorter.SortKey(7, SortOrder.ASCENDING));
@@ -250,26 +237,14 @@ public class PanelSWSingleClientInfo extends JPanel {
 
 		if (withPopup) {
 			new PopupMenuTrait(
-					new Integer[] { PopupMenuTrait.POPUP_EXPORT_CSV, PopupMenuTrait.POPUP_EXPORT_SELECTED_CSV,
-							PopupMenuTrait.POPUP_RELOAD, PopupMenuTrait.POPUP_PDF, PopupMenuTrait.POPUP_FLOATING_COPY },
-					new JComponent[] { this, panelTable.getGenEditTable(), panelTable.getTheScrollpane() }) {
+					List.of(PopupMenuTrait.POPUP_EXPORT_CSV, PopupMenuTrait.POPUP_EXPORT_SELECTED_CSV,
+							PopupMenuTrait.POPUP_RELOAD, PopupMenuTrait.POPUP_PDF, PopupMenuTrait.POPUP_FLOATING_COPY),
+					List.of(this, panelTable.getGenEditTable(), panelTable.getTheScrollpane())) {
 				@Override
 				public void action(int p) {
 					actionOnPopupMenu(p);
 				}
 			};
-		}
-	}
-
-	private static class OSComparator implements Comparator<Boolean> {
-		@Override
-		public int compare(Boolean o1, Boolean o2) {
-			boolean b1 = o1;
-			boolean b2 = o2;
-			if (b1 == b2) {
-				return 0;
-			}
-			return b1 ? -1 : 1;
 		}
 	}
 
@@ -298,7 +273,7 @@ public class PanelSWSingleClientInfo extends JPanel {
 
 		Logging.info(this, "retrieving data for ", hostId);
 		Map<String, List<SWAuditClientEntry>> swAuditClientEntries = persistenceController.getDataServices().software
-				.getSoftwareAuditOnClients(Collections.singletonList(hostId));
+				.getSoftwareAuditOnClients(List.of(hostId));
 
 		Map<String, Map<String, Object>> tableData = persistenceController.getDataServices().software
 				.retrieveSoftwareAuditData(swAuditClientEntries, hostId);
