@@ -21,7 +21,6 @@ import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
@@ -69,14 +68,15 @@ public class WebDAVClient {
 		String sessionID = PersistenceControllerFactory.getPersistenceController().getExecutioner().getSessionId();
 
 		if (sessionID != null) {
-			builder.setDefaultHeaders(Collections.singletonList(new BasicHeader("Cookie", sessionID)));
+			builder.setDefaultHeaders(List.of(new BasicHeader("Cookie", sessionID)));
 			sardine = new SardineImpl(builder);
 		} else {
 			sardine = new SardineImpl(builder);
-			int port = getPortFromHost(persistenceController.getExecutioner().getHost());
-			sardine.enablePreemptiveAuthentication(persistenceController.getExecutioner().getHost(), port, port);
-			sardine.setCredentials(persistenceController.getExecutioner().getUsername(),
-					persistenceController.getExecutioner().getPassword());
+			int port = getPortFromHost(persistenceController.getExecutioner().getHostData().getHost());
+			sardine.enablePreemptiveAuthentication(persistenceController.getExecutioner().getHostData().getHost(), port,
+					port);
+			sardine.setCredentials(persistenceController.getExecutioner().getHostData().getUser(),
+					persistenceController.getExecutioner().getHostData().getPassword());
 		}
 	}
 
